<?xml version="1.0"?>
<package format="2">
  <name>ros_tutorials_topic</name>
  <version>0.1.0</version>
  <description>ROS tutorial package to learn the topic</description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Yoonseok Pyo</author>
  <maintainer email="pyo@robotis.com">Yoonseok Pyo</maintainer>
  <url type="website">http://www.robotis.com</url>
  <url type="repository">http://www.github.com/ROBOTIS-GIT/ros-tutorials.git</url>
  <url type="bugtracker">http://www.github.com/ROBOTIS-GIT/ros-tutorials/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</build_depend>
  <depend>roscpp</build_depend>
  <depend>std_msgs</build_depend>
  <export>
  </export>
</package>
